@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

'left to right direction

skinparam classAttributeIconSize 0

hide circle
hide methods

title Domain Model - US004

class User {
  name
  passportNumber
  taxNumber
  address
}

class Owner {

}

class PropertySaleRequest{

}

class Property {
    area
    distanceFromCityCenter
    photos
}
class Land{

}

class ResidentialProperty {
    numberOfRooms
    numberOfBedrooms
    numberOfBathrooms
    numberOfParkingSpaces
    availableEquipment
}

class Apartment{

}
class House{
    existenceOfBasement
    ExistenceOfInhabitableLoft
    sunExposure
}


Owner "1" - "0.*" Property : has >
Property "1"--"1" "Land" : can be >
Property "1" <|-- "1" ResidentialProperty : can be
ResidentialProperty "1" <|-- "1" Apartment : can be
ResidentialProperty "1" <|-- "1" House : can be
Owner "1"--"0.*" PropertySaleRequest: creats >
User <|-- Owner

@enduml